--- a/mysql.yaml
+++ b/mysql.yaml
@@ -8,8 +8,8 @@
     loop:
     - cryptography
     - PyMySQL
-    
-      
+
+
   - name: install mysql server
     ansible.builtin.package:
       name: mysql-server
@@ -26,5 +26,11 @@
       login_user: root
       login_password: ExpenseApp@1
       login_host: mysql.jaydevops.online
+    register: mysql_info
+    ignore_errors: true
+
+  - name: print the output
+    ansible.builtin.debug:
+      msg: "Mysql info: {{ mysql_info }}"    
 
         
