--- a/mysql.yaml
+++ b/mysql.yaml
@@ -9,7 +9,6 @@
     - cryptography
     - PyMySQL
 
-
   - name: install mysql server
     ansible.builtin.package:
       name: mysql-server
@@ -33,4 +32,6 @@
     ansible.builtin.debug:
       msg: "Mysql info: {{ mysql_info }}"    
 
-        
+  - name: setup root password
+    ansible.builtin.command: " mysql_secure_installation --set-root-pass ExpenseApp@1 "
+    when: mysql_info.failed is true
