--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,12 @@
 [mysql]
-54.173.65.102 ansible_user=ec2-user ansible_password=DevOps321
+mysql.jaydevops.online
+
+[backend]
+backend.jaydevops.online
+
+[frontend]
+frontend.jaydevops.online
+
+[all:vars]
+ansible_user=ec2-user
+ansible_password=DevOps321
