--- a/mysql.yaml
+++ b/mysql.yaml
@@ -16,7 +16,7 @@
       name: mysql-server
       state: installed
 
-  - name: enable and start
+  - name: enable and start mysql server
     ansible.builtin.service:
       name: mysqld
       state: started
@@ -37,4 +37,3 @@
   - name: setup root password
     ansible.builtin.command: " mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
     when: mysql_info.failed is true
-    
