--- a/backend.yaml
+++ b/backend.yaml
@@ -12,3 +12,23 @@
     ansible.builtin.package:
       name: nodejs
       state: present
+
+  - name: create expense user
+    ansible.builtin.user:
+      name: expense
+
+  - name: Create app directory
+    ansible.builtin.file:
+      path: /app
+      state: directory
+
+  - name: Download project backend code
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+      dest: /tmp/backend.zip
+
+  - name: Unzip the backend zip file
+    ansible.builtin.unarchive:
+      src: /tmp/backend.zip
+      dest: /app
+       
