--- a/backend.yaml
+++ b/backend.yaml
@@ -32,4 +32,8 @@
       src: /tmp/backend.zip
       dest: /app
       remote_src: yes
+
+  - name: install dependencies
+    community.general.npm:
+      path: /app    
        
