--- a/backend.yaml
+++ b/backend.yaml
@@ -45,6 +45,14 @@
       src: backend.service
       dest: /etc/systemd/system/backend.service
 
+  - name: install python libs
+    ansible.builtin.pip:
+      name: "{{ item }}"
+      executable: pip3.9
+    loop:
+    - PyMySQL
+    - cryptography  
+       
   - name: import sql data
     community.mysql.mysql_db:
       state: import
