--- a/backend.yaml
+++ b/backend.yaml
@@ -63,7 +63,7 @@
       target: /app/schema/backend.sql
 
   - name: daemon reload and restart service
-    ansbile.builtin.systemd_service:
+    ansible.builtin.systemd_service:
       enabled: true
       state: restarted
       daemon_reload: true
