--- a/frontend.yaml
+++ b/frontend.yaml
@@ -29,7 +29,7 @@
       dest: /tmp/frontend.zip
 
   - name: unzip frontend code
-    ansbile.builtin.unarchive:
+    ansible.builtin.unarchive:
       src: /tmp/frontend.zip
       dest: /usr/share/nginx/html
       remote_src: yes
