--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,39 +1,14 @@
-- name: Configure mysql server
+- name: MySQL playbook
   hosts: mysql
   become: yes
-  vars:
-    mysql_root_password: ExpenseApp@1
   tasks:
-  - name: install mysql libraries
-    ansible.builtin.pip:
-      name: "{{ item }}"
-    loop:
-    - cryptography
-    - PyMySQL
-
-  - name: install mysql server
+  - name: To install mysql DB on server
     ansible.builtin.package:
-      name: mysql-server
+      name: mysql
       state: installed
 
-  - name: enable and start mysql server
+  - name: To enable and start the mysql service
     ansible.builtin.service:
-      name: mysqld
-      state: started
       enabled: yes
-
-  - name: Connect to mysql server
-    community.mysql.mysql_info:
-      login_user: root
-      login_password: ExpenseApp@1
-      login_host: mysql.jaydevops.online
-    register: mysql_info
-    ignore_errors: true
-
-  - name: print the output
-    ansible.builtin.debug:
-      msg: "Mysql info: {{ mysql_info }}"
-
-  - name: setup root password
-    ansible.builtin.command: " mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
-    when: mysql_info.failed is true
+      name: mysql
+      state: start 
