--- a/backend.yaml
+++ b/backend.yaml
@@ -17,18 +17,18 @@
     - mysql
 
   - name: Create user expense
-    ansible.builtin.user
-    name: expense
+    ansible.builtin.user:
+      name: expense
 
   - name: Create directory
     ansible.builtin.file:
-    path: /app
-    state: directory
+       path: /app
+       state: directory
 
   - name: download source code
     ansible.builtin.get_url:
-    url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
-    dest: /tmp/backend.zip
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
+      dest: /tmp/backend.zip
   
   - name: unzip the source code in remote backend server
     ansible.builtin.unarchive:
