Expense project with Ansible

--- a/frontend.yaml
+++ b/frontend.yaml
@@ -1,40 +1,41 @@
-- name: configure frontend server
+- name: To Configure the frontend service
   hosts: frontend
   become: yes
   tasks:
-  - name: To install nginx
+
+  - name: To install web server
     ansible.builtin.package:
       name: nginx
       state: present
 
-  - name: enable and start service
+  - name: To enable and restart the service
     ansible.builtin.service:
+      state: present
       name: nginx
-      state: started
       enabled: yes
-
-  - name: to remove deafult content in html directory
+  
+  - name: to remove deafault content in html directory
     ansible.builtin.file:
       path: /usr/share/nginx/html
       state: absent
 
-  - name: create html directory
+  - name: to create html directory
     ansible.builtin.file:
       path: /usr/share/nginx/html
       state: directory
 
-  - name: download frontend content
+  - name: download frontend source code
     ansible.builtin.get_url:
-      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip  
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
       dest: /tmp/frontend.zip
 
-  - name: unzip frontend code
+  - name: unzip the code
     ansible.builtin.unarchive:
       src: /tmp/frontend.zip
       dest: /usr/share/nginx/html
       remote_src: yes
 
-  - name: copy expense.conf file to default.d in etc
+  - name: copy expense.conf
     ansible.builtin.copy:
       src: expense.conf
       dest: /etc/nginx/default.d/expense.conf
@@ -43,6 +44,3 @@
     ansible.builtin.service:
       name: nginx
       state: restarted
-         
-
-
