Expense project with Ansible

--- a/inventory.ini
+++ b/inventory.ini
@@ -5,7 +5,7 @@ mysql.jaydevops.online
 backend.jaydevops.online
 
 [frontend]
-frontend.jaydevops.online
+jaydevops.online
 
 [all:vars]
 ansible_user=ec2-user
