--- a/frontend.yaml
+++ b/frontend.yaml
@@ -11,7 +11,7 @@
   - name: To enable and restart the service
     ansible.builtin.service:
       name: nginx
-      state: present
+      state: started
       enabled: yes
   
   - name: to remove deafault content in html directory
